--- a/style.css
+++ b/style.css
@@ -290,4 +290,75 @@ footer li:nth-child(2) {
     border: 1px solid black;
     border-radius: 7px;
 }
+article {
+    background-color: #161616;
 
+}
+
+.articlBox {
+    width: 50%;
+    margin: 20px auto 0;
+    padding: 70px 0;
+}
+
+.articleText1 {
+    font-size: 27px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.articleText1 a {
+    color: #00A3E0;
+}
+.questions{
+    margin: 50px 0; 
+}
+hr{
+    border: 1px solid #353131;
+    margin: 30px 0;
+}
+.accordion {
+    /* background-color: #eee;
+    color: #444; */
+    background-color: #161616;
+
+    cursor: pointer;
+    /* padding: 18px; */
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 20px;
+    transition: 0.4s;
+    
+}
+.middle-acc{
+    /* margin: 50px 0; */
+}
+
+.active,
+.accordion:hover {
+    /* background-color: #ccc; */
+}
+
+.panel {
+    /* padding: 0 18px; */
+    display: none;
+    /* background-color: white; */
+    overflow: hidden;
+}
+.acordText{
+    margin: 30px 0;
+    /* text-align: justify; */
+
+}
+.indentText{
+    padding: 0 0 30px 20px;
+} 
+.questTwo , .questThree{
+    padding: 20px 0;
+}
+.articlepath{
+    fill: white;
+}
