--- a/style.css
+++ b/style.css
@@ -34,7 +34,19 @@ nav ul li a {
     margin-right: 40px;
 
 }
-
+.nav-bar-icon {
+    cursor: pointer;
+    display: none;
+    width: 130px;
+    
+}
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
 .active-link {
     color: #00A3E0;
 }
@@ -260,14 +272,6 @@ hr{
     transition: 0.4s;
     
 }
-.middle-acc{
-    /* margin: 50px 0; */
-}
-
-.active,
-.accordion:hover {
-    /* background-color: #ccc; */
-}
 
 .panel {
     display: none;
@@ -335,3 +339,43 @@ footer li:nth-child(2) {
     border: 1px solid black;
     border-radius: 7px;
 }
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (max-width: 768px) {
+    
+    header {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     padding: 10px;
+ } 
+     
+     .nav-bar-icon{
+         display: block;
+     }
+     nav{
+         display: none;
+     }
+     
+     nav.active {
+         display: block;
+         position: absolute;
+         top: 60px; /* Adjust based on your header height */
+         right: 0;
+         width: 10%;
+         background: rgb(50, 50, 50);
+     }
+     nav ul {
+         flex-direction: column;
+         text-align: center;
+     }
+     .mainImgText {
+         top: 50%;
+         left: 40%;}
+     .aboutUsaid{
+         width: 100%;
+     }
+     
+     
+ }
